Fixed tutti screen layout problem.

--- a/frontend/src/sass/components/_scheda.scss
+++ b/frontend/src/sass/components/_scheda.scss
@@ -31,7 +31,8 @@
     h1 {
       padding: 1rem 0.5rem;
       border-bottom: 1px solid rgb(173, 173, 173);
-      text-align: center
+      text-align: center;
+      word-break: break-word;
     }
 
     &__img-container {
